deployment/crud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: crud-deployment
  labels:
    app: crud
spec:
  replicas: 3
  selector:
    matchLabels:
      app: crud
  template: 
    metadata: 
      labels:
        app: crud
    spec:
      containers:
       - name: crud
         image: haritsrizkal/crud-user:0.0.3
         ports:
            - containerPort: 3000
