deployment/crud-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-nodeport-service
  labels:
    app: crud
spec:
  type: NodePort
  selector:
    app: crud
  ports:
    - name: crud
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: crud-service
  labels:
    app: crud
spec:
  selector:
    app: crud
  ports:
    - name: crud
      protocol: TCP
      port: 3000
      targetPort: 3000
