deployment/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec: 
  rules:
    - host: crud.service.test
      http:
        paths:
          - path: /*
            pathType: Prefix
            backend:
              service:
                name: crud-service
                port:
                  number: 3000
